--- a/web/admin/usuariosPlantilla.xhtml
+++ b/web/admin/usuariosPlantilla.xhtml
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Gestión de Estados</title>
+        <title>Gestión de Usuarios</title>
         <link href="../dist/css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
     </h:head>
@@ -52,7 +52,7 @@
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Gestiones de Administrador
+                                Gestion de Administrador
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
@@ -83,10 +83,10 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid">
-                        <h1 class="mt-4">Gestión de Estados</h1>
+                        <h1 class="mt-4">Gestión de Usuarios</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                            <li class="breadcrumb-item active">Gestión de Estados</li>
+                            <li class="breadcrumb-item active">Gestión de Usuarios</li>
                         </ol>
                         <div class="card mb-4">
                             <div class="card-body">
@@ -122,7 +122,6 @@
         <script src="../dist/js/scripts.js"></script>
     </h:body>
 </html>
-
 
 
 
