--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -43,7 +43,7 @@
                                         </h:form>
                                         <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
                                         <p:dialog widgetVar="statusDialog" modal="true"  draggable="false" closable="false" resizable="false" showHeader="false">
-                                            <h:outputLabel value="Cargarndo..." />
+                                            <h:outputLabel value="Cargando..." />
                                         </p:dialog>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                 </footer>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+        
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="dist/js/scripts.js"></script>
     </h:body>
