--- a/web/panelAdmin.xhtml
+++ b/web/panelAdmin.xhtml
@@ -73,7 +73,7 @@
 
         <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
         <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-            <h:outputLabel value="Cargarndo..." />
+            <h:outputLabel value="Cargando..." />
         </p:dialog>
     </h:body>
 </html>
