--- a/web/panelRH.xhtml
+++ b/web/panelRH.xhtml
@@ -9,8 +9,6 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-<!--                <ui:composition template="/plantillaPrincipal.xhtml">
-                    <ui:define name="footer">-->
 
         <div class="row">
             <div class="col-md-12">
@@ -106,20 +104,15 @@
                             <p:commandButton type="button" value="Clear" icon="pi pi-trash" onclick="PF('term').clear()" style="margin-top:10px"/>
                         </div>
                     </div>
-
-
                 </h:form>
             </div>
         </div>
 
         <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
         <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-            <h:outputLabel value="Cargarndo..." />
+            <h:outputLabel value="Cargando..." />
         </p:dialog>
 
-        <!--            </ui:define>
-       
-                </ui:composition>-->
     </h:body>
 </html>
 
