--- a/web/rrhh/actualizacionSalario.xhtml
+++ b/web/rrhh/actualizacionSalario.xhtml
@@ -9,7 +9,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ui:composition template="../plantillaPrincipal.xhtml">
+        <ui:composition template="../index.xhtml">
 
             <ui:define name="content">
                 <div class="col-md-12">
@@ -78,7 +78,7 @@
 
                         <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
                         <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-                            <h:outputLabel value="Cargarndo..." />
+                            <h:outputLabel value="Cargando..." />
                         </p:dialog>
 
                     </div>
